--- a/css/style2.css
+++ b/css/style2.css
@@ -56,17 +56,22 @@
 .layout.dashboard .l70 {width: calc(70% - 10px);}
 
 #layer-1{
+	position:relative;
 	width: 500px;
 	border: 1px dotted blue;
 	height: 1200px;
 	float: right;
+	z-index:100;
+	background-color:#ffffff;
 }
 #layer-2{
 	width: 100%;
-	height: 1200px;
-	
+	height: 1200px;	
 	border: 2px dotted blue;
 }
+
+.layer-1-1{z-index:100;}
+
 
 .pop_content .layout .movement_box {
     display: flex;
@@ -583,13 +588,16 @@ footer p::before {
     border-bottom: 0;
 }
 .pop_box .tbl_box table thead th {
+	position : sticky;
+  top : 0;
     border-top: 0;
     padding: 10px;
 }
 .pop_footer {
     margin-top: 20px;
 }
-
+.tbl_box table {
+}
 /* 에러페이지 */
 .error_box {
     display: flex;
@@ -1251,6 +1259,7 @@ footer p::before {
     background-color: #d8e7f3;
   }
   .rwd-table td:before {
+
     display: none;
   }
   .rwd-table th,
